<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalendarETS</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Hello world!</string>
    <string name="mercredi">Hello world!</string>
    <string name="jeudi">Hello world!</string>
    <string name="vendredi">Hello world!</string>
    <string name="menu_ajouter_cours">Ajouter Cours</string>
    <string name="menu_ajouter_travaux">Ajouter Travaux</string>
    <string name="menu_ajouter_examen">Ajouter Examen</string>
    <string name="menu_ajouter_changementhoraire">Ajouter Changement d\'horaire</string>
    <string name="title_activity_ajouter_travail">Ajouter Travail</string>
    <string name="ajouter_travail_titre">Titre du travail</string>
    <string name="ajouter_travail_dateremise">Date de remise</string>
    <string name="ajouter_travail_heureremise">Heure de remise</string>
    <string name="ajouter_travail_notes">Notes</string>
    <string name="pick_date">Choisissez une date</string>
    <string name="title_activity_ajouter_cours">Ajouter Cour</string>
    <string name="ajouter_cour_titre">Titre</string>
    <string name="ajouter_cour_titre_hint">Titre du cour a ajouter</string>
    <string name="ajouter_cour_journee">Journee</string>
    <string name="ajouter_cour_local">Local</string>
    <string name="ajouter_cour_local_hint">Local</string>
    <string name="ajouter_cour_heure_debut">Heure debut</string>
    <string name="ajouter_cour_heure_fin">Heure fin</string>
    <string name="bouton_choisir_heure">Heure</string>
    <string name="title_activity_ajouter_changement_horraire">Changement D\'Horraire</string>
    <string name="TitreEvenement">Evenement</string>
    <string name="nom_evenement_hint">Raison du changement</string>
    <string name ="ajouter_changement_date">Date du changement d\'horraire</string>
    
    <string-array name="jour_array">
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
        <item>Dimanche</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ajouter_changement_de_date">AjouterChangementDeDate</string>

</resources>
