<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--  
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
-->
    <item android:id="@+id/action_ajouter_travaux"
          android:showAsAction="ifRoom"
          android:title="@string/menu_ajouter_travaux" />
    
    <item android:id="@+id/action_ajouter_examen"
          android:showAsAction="ifRoom"
          android:title="@string/menu_ajouter_examen" />
    
    <item android:id="@+id/action_ajouter_cours"
          android:showAsAction="ifRoom"
          android:title="@string/menu_ajouter_cours" />
    
    <item android:id="@+id/action_ajouter_changementhoraire"
          android:showAsAction="ifRoom"
          android:title="@string/menu_ajouter_changementhoraire" />
</menu>
