<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AjouterCour" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ajouterCourTextTitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/ajouter_cour_titre" />

            <EditText
                android:id="@+id/ajouterCourEditTitre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/ajouter_cour_titre_hint" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ajouterCourTexTJour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_cour_journee" />

            <Spinner
                android:id="@+id/ajouterCourJourSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ajouterCourTexTLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_cour_local" />

            <EditText
                android:id="@+id/ajouterCourEditLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.18"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/ajouter_cour_local_hint" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ajouterCourTexTHeureDebut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_cour_heure_debut" />

            <Button
                android:id="@+id/ajouter_cour_bouton_heure_debut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton_choisir_heure"
                android:onClick="showDebutTimePickerDialog"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ajouterCourTexTHeurefin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_cour_heure_fin" />

            <Button
                android:id="@+id/ajouter_cour_bouton_heure_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bouton_choisir_heure"
                android:onClick="showFinTimePickerDialog"  />
		</LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ajouter_cour_bouton_enregistrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>