<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AjouterChangementHorraire" >
    
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
            <LinearLayout 
                android:layout_width="match_parent"
        		android:layout_height="wrap_content">
        		
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/TitreEvenement"/>
                
                <EditText 
                    android:id="@+id/nom_evenement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    android:hint="@string/nom_evenement_hint"/>
                
            </LinearLayout>
            
            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/ajouter_changement_date" />
	
	            <Button 
	                android:id="@+id/changement_pick_date_button"
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content"
				    android:text="@string/pick_date" 
				    android:onClick="showDatePickerDialog" />
	            
	        </LinearLayout>
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/changerHorraireTexTJour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_cour_journee" />

            <Spinner
                android:id="@+id/changerHorraireJourSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </LinearLayout>
            
            <LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ajouter_changement_bouton_enregistrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
            </LinearLayout>
            
    </LinearLayout>
    
</RelativeLayout>
</ScrollView>